# MultiMC5

./: .gitmodules  CMakeLists.txt
api/logic/: BaseInstance.cpp  BaseInstance.h  CMakeLists.txt  Env.cpp  Env.h  IconUrlProxyModel.cpp  IconUrlProxyModel.h  InstanceCreationTask.cpp  InstanceImportTask.cpp  NullInstance.h  ProblemProvider.h  ProxyModelChain.cpp  ProxyModelChain.h
api/logic/meta/: BaseEntity.cpp  JsonFormat.cpp  JsonFormat.h  Version.cpp  Version.h  VersionList.cpp
api/logic/minecraft/: ComponentList.cpp  ComponentList.h  LaunchProfile.cpp  LaunchProfile.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftUpdate.cpp  ProfilePatch.cpp  ProfilePatch.h  VersionFile.cpp  VersionFile.h
api/logic/net/: ChecksumValidator.h
api/logic/scripting/: EntityProvider.cpp  EntityProvider.h  EntityProviderManager.cpp  EntityProviderManager.h  EntityProviderModel.cpp  EntityProviderModel.h  LuaFwd.h  LuaUtil.cpp  LuaUtil.h  LuaUtil_test.cpp  Script.cpp  Script.h  ScriptEntityVersion.cpp  ScriptEntityVersion.h  ScriptManager.cpp  (+3 more)
application/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MultiMC.cpp  MultiMC.h
application/dialogs/: EntitySelectionDialog.cpp  EntitySelectionDialog.h  EntitySelectionDialog.ui  ProgressDialog.cpp
application/pages/: VersionPage.cpp  VersionPage.h  VersionPage.ui
application/technic/: PackModel.cpp  PackModel.h  PackWidget.cpp  PackWidget.h  PackWidget.ui  PackWindow.cpp  PackWindow.h  SolderVersion.cpp  SolderVersion.h
libraries/modeltest/: CMakeLists.txt
scripts/: CMakeLists.txt  curse.lua  forge.lua  liteloader.lua
(+16 files in other folders)
